--- a/project1-cricInfo/src/App.css
+++ b/project1-cricInfo/src/App.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Climate Crisis', cursive;
-  --primary-background-color: rgba(216, 186, 239, 0.7);
+  --primary-background-color: rgba(175, 150, 150, 0.7);
   --primary-font-color: #9a7d7d;
   --secondary-font-color: rgb(37, 23, 23); 
-  --primary-card-color: rgba(232, 220, 241, 0.7);
+  --primary-card-color: #f9e8e8;
 }
 
