--- a/samosaSelector/src/App.css
+++ b/samosaSelector/src/App.css
@@ -1,33 +1,12 @@
-:root, ::after, ::before {
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Open+Sans:wght@300;500;600;700&display=swap');
+
+:root, ::before, ::after {
   box-sizing: border-box;
   font-size: 16px;
-}
-.App {
-  width: 100vw;
-  display: flex;
-  margin: 4rem 2rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  font-family: 'Climate Crisis', cursive;
+  --primary-background-color: rgba(0, 0, 0, 0.7);
+  --primary-font-color: #9a7d7d;
+  --secondary-font-color: rgb(37, 23, 23); 
+  --primary-card-color: #f9e8e8;
 }
 
-.container{
-  margin: 4rem;
-  padding: 2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.container .card{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(33, 32, 32);
-  padding: 2rem;
-  border-radius: 15px;
-  margin: 1rem;
-}
